--- a/PracticSite/templates/base.html
+++ b/PracticSite/templates/base.html
@@ -13,6 +13,7 @@
 		{% if not user.is_authenticated %}
 			<a href="{% url 'main:log_in' %}" style="float: right; margin: 1vw;">Авторизация</a>
 		{% else %}
+			<a href="{% url 'main:personal_cab' %}" style="float: right; margin: 1vw;">Личный кабинет</a>
 			<a href="{% url 'main:log_out' %}" style="float: right; margin: 1vw;">Выход</a>
 			{% if user.username == 'admin' %}
 				<a href="/admin" style="float: right; margin: 1vw;">Админка</a>
