--- a/PracticSite/templates/blog/article.html
+++ b/PracticSite/templates/blog/article.html
@@ -16,17 +16,16 @@
 	{% endif %}
 
 	{% if user.username == article.user.username %}
-		<a href="">Изменить статью</a>
 		{% if perms.blog.delete_article %}
-			<p><a href="{% url 'blog:delete_article' article.pk %}">Удалить статью</a>
+			<a href="{% url 'blog:delete_article' article.pk %}" style="float: left; margin-left: 1vw;">Удалить статью</a>
 		{% endif %}
 		{% if perms.blog.change_article %}
-			<p><a href="{% url 'blog:update_article' article.pk %}">Изменить статью</a>
+			<a href="{% url 'blog:update_article' article.pk %}" style="float: left; margin-left: 2vw;">Изменить статью</a>
 		{% endif %}
 	{% endif %}
 
 	{% if user.is_authenticated %}
-		<div class="comments">
+		<div class="comments" style="float: left; margin: 2vw 0 0 1vw; clear: left;">
 			<form method="post">
 				{% csrf_token %}
 				<input type="text" name="comment" placeholder="Комментарий" style="margin-top: 2vw;">
@@ -38,13 +37,15 @@
 	{% endif %}
 
 	{% if comments %}
-		<h2>Комментарии:</h2>
-		{% for comment in comments %}
-			<div class="comment" style="margin: 2vw 0 0 2vw;">
-				<p>Автор: {{comment.user.username}}
-				<p>Комментарий: {{comment.comment}}
-			</div>
-		{% endfor %}
+		<div  style="float: left; margin: 2vw 0 0 2vw; clear: left;">
+			<h2>Комментарии:</h2>
+			{% for comment in comments %}
+				<div class="comment" style="margin: 2vw 0 0 2vw;">
+					<p>Автор: {{comment.user.username}}
+					<p>Комментарий: {{comment.comment}}
+				</div>
+			{% endfor %}
+		</div>
 	{% endif %}
 
 
